# todolang

./: Cargo.toml  README.md
enum_macros/: Cargo.toml
enum_macros/src/: lib.rs
locatable_derive/: Cargo.toml
locatable_derive/src/: lib.rs
restore_macros/: Cargo.toml
restore_macros/src/: lib.rs
src/: declaration_environment.rs  diagnostics.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  name_resolver.rs  parser.rs  parser2.rs  resolver.rs  semantic_analyzer.rs  source_location.rs  symbol_table.rs  syntax.rs  token.rs
src/analysis/: constraint_environment.rs  constraint_set.rs  environment.rs  errors.rs  mod.rs  semantic_analyzer.rs
src/ast/: iterators.rs  mod.rs  typed.rs  untyped.rs
src/diagnostics/: analysis.rs  diagnostics.rs  mod.rs
src/interpreter/: environment.rs  interpreter.rs  mod.rs
src/interpreter2/: environment.rs  interpreter.rs
src/types/: checker.rs  constraints.rs  environment.rs  environment2.rs  error.rs  impl_environment.rs  mod.rs  trait_bound.rs  type_scheme.rs  types.rs  unify.rs
tests/: interpreter.rs  interpreter2.rs
tests/todo/: 10_1_function_call_type_mismatch.expected  10_1_function_call_type_mismatch.todo  10_functions.expected  10_functions.todo  11_5_1_invalid_return_error.expected  12_classes.expected  12_classes.todo  13_inheritance.expected  13_inheritance.todo  1_0_assert.todo  1_1_assert_illegal_argument.expected  1_1_assert_illegal_argument.todo  1_2_assert_failure.expected  1_assert.todo  1_match.todo  2_0_binary_operators.todo  2_1_variable_expression.todo  2_equality.todo  3_0_unary_expression.todo  (+49 more)
(+7 files in other folders)
